--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -49,4 +49,7 @@ jobs:
     - name: Pack Cosmos Postgres
       run: |
         dotnet nuget push "src/Sekiban.Infrastructure.Postgres/bin/Release/Sekiban.Infrastructure.Postgres.${{ github.event.release.tag_name }}.nupkg" --api-key ${{secrets.NUGET_APIKEY}}  --source https://api.nuget.org/v3/index.json
-  
+    - name: Pack MemStat
+      run: |
+        dotnet nuget push "src/MemStat.Net/bin/Release/MemStat.Net.0.1.0.nupkg" --api-key ${{secrets.NUGET_APIKEY}}  --source https://api.nuget.org/v3/index.json
+        
