--- a/tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj
+++ b/tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj
@@ -5,10 +5,10 @@
         <IsPackable>false</IsPackable>
         <LangVersion>preview</LangVersion>
         <OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
-        <TargetFramework>net8.0</TargetFramework>
         <UserSecretsId>55f43f08-0c5d-41bd-8846-13832dbc5714</UserSecretsId>
         <RootNamespace>Sekiban.Test.CosmosDb</RootNamespace>
         <AssemblyName>Sekiban.Test.CosmosDb</AssemblyName>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
