--- a/internalUsages/FeatureCheck.Domain/FeatureCheck.Domain.csproj
+++ b/internalUsages/FeatureCheck.Domain/FeatureCheck.Domain.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <TargetFramework>net8.0</TargetFramework>
         <LangVersion>preview</LangVersion>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
