--- a/tests/FeatureCheck.Test/FeatureCheck.Test.csproj
+++ b/tests/FeatureCheck.Test/FeatureCheck.Test.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
-        <TargetFramework>net8.0</TargetFramework>
         <LangVersion>preview</LangVersion>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
