--- a/tests/Sekiban.Test.Abstructs/Sekiban.Test.Abstructs.csproj
+++ b/tests/Sekiban.Test.Abstructs/Sekiban.Test.Abstructs.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
         <UserSecretsId>c9ba1581-3bfb-4193-af2e-f00c722e1956</UserSecretsId>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
