--- a/tests/Sekiban.Test.Dynamo/Sekiban.Test.Dynamo.csproj
+++ b/tests/Sekiban.Test.Dynamo/Sekiban.Test.Dynamo.csproj
@@ -7,7 +7,7 @@
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
         <UserSecretsId>061df99d-c7f4-40e1-a19f-072ecc31141b</UserSecretsId>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
