--- a/tests/Sekiban.Test.Postgres/Sekiban.Test.Postgres.csproj
+++ b/tests/Sekiban.Test.Postgres/Sekiban.Test.Postgres.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
         <UserSecretsId>27a80912-85a9-4136-809e-aa93c9d5932d</UserSecretsId>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
