--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -72,6 +72,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -120,6 +124,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -170,6 +178,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -220,6 +232,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -268,6 +284,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -316,6 +336,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -366,6 +390,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -449,6 +477,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -519,6 +551,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
@@ -587,6 +623,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Setup .NET 9
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
     - name: Secret Settings
       run: |
         pushd ./tests/Sekiban.Test.Abstructs
