--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -12,57 +12,7 @@ concurrency:
   group: CosmosDbConnect
   cancel-in-progress: false
 jobs:
-  # regular70:
-  #   strategy:
-  #     max-parallel: 2
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - name: Setup .NET 8
-  #     uses: actions/setup-dotnet@v4
-  #     with:
-  #       dotnet-version: 8.0.x
-  #   - name: Setup .NET 7
-  #     uses: actions/setup-dotnet@v4
-  #     with:
-  #       dotnet-version: 7.0.x
-  #   - name: Secret Settings
-  #     run: |
-  #       pushd ./tests/Sekiban.Test.Abstructs
-  #       dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
-  #       dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
-  #       dotnet user-secrets set "ConnectionStrings:SekibanPostgresDefault" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_DEFAULT}}"
-  #       dotnet user-secrets set "ConnectionStrings:SekibanPostgresSecondary" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_SECONDARY}}"
-  #       dotnet user-secrets set "Sekiban:Default:Azure:CosmosDatabase" "GithubActions"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Azure:CosmosDatabase" "GithubActions"
-  #       dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
-  #       dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
-  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
-  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "jjga_items"
-  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "jjga_events"
-  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "jjga_d_items"
-  #       dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "jjga_d_events"
-  #       dotnet user-secrets set "Sekiban:Default:Aws:S3Region" "us-west-1"
-  #       dotnet user-secrets set "Sekiban:Default:Aws:S3BucketName" "jjga-s3"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoRegion" "us-west-1"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTable" "jjga_items_2"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTable" "jjga_events_2"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoItemsTableDissolvable" "jjga_d_items_2"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:DynamoEventsTableDissolvable" "jjga_d_events_2"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3Region" "us-west-1"
-  #       dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:S3BucketName" "jjga-s3"        
-  #   - name: Restore dependencies
-  #     run: |
-  #       dotnet restore Sekiban.sln
-  #   - name: Test dotnet
-  #     run: |
-  #       dotnet test Sekiban.sln  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net7.0
-  #   # - uses: mktcode/consecutive-workflow-action@v1
-  #   #   with:
-  #   #     token: ${{ secrets.GITHUB_TOKEN }}
-  regular80aggregateTest:
+  regularAggregateTest:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
@@ -117,7 +67,7 @@ jobs:
         dotnet test tests/FeatureCheck.Test/FeatureCheck.Test.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
       
 
-  regular80mixed:
+  regular80Mixed:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
@@ -170,11 +120,11 @@ jobs:
         dotnet test tests/Mixed.Test/Mixed.Test.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net8.0
   
 
-  regular80multitenant:
+  regular80Multitenant:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
-    needs: [ regular80mixed ]
+    needs: [ regular80Mixed ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
@@ -227,7 +177,7 @@ jobs:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
-    needs: [ regular80multitenant ]
+    needs: [ regular80Multitenant ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
@@ -281,7 +231,7 @@ jobs:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
-    needs: [ regular90cosmosMultiTenant ]
+    needs: [ regular90MultiTenant ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
@@ -333,7 +283,7 @@ jobs:
       run: |
         dotnet test tests/MultiTenant.AggregateTest/MultiTenant.AggregateTest.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
 
-  regular90cosmosMixed:
+  regular90Mixed:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
@@ -385,11 +335,11 @@ jobs:
         dotnet test tests/Mixed.Test/Mixed.Test.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
 
 
-  regular90cosmosMultiTenant:
+  regular90MultiTenant:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
-    needs: [ regular90cosmosMixed ]
+    needs: [ regular90Mixed ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
@@ -434,12 +384,12 @@ jobs:
       run: |
         dotnet build Sekiban.sln -c Release
       
-    - name: Test dotnet tests/Sekiban.Test.CosmosDb
+    - name: Test dotnet tests/MultiTenant.AggregateTest
       run: |
-        dotnet test tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net8.0
-     
+        dotnet test tests/MultiTenant.AggregateTest/MultiTenant.AggregateTest.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
+       
 
-  regular80dynamo:
+  regularDynamo:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
@@ -494,7 +444,7 @@ jobs:
       run: |
         dotnet test tests/Sekiban.Test.Dynamo/Sekiban.Test.Dynamo.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
   
-  regular80postgres:
+  regularPostgres:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
@@ -554,7 +504,7 @@ jobs:
       max-parallel: 4
 
     runs-on: ubuntu-latest
-    needs: [ regular80aggregateTest, regular80postgres,regular80dynamo ,regular80cosmos ]
+    needs: [ regularAggregateTest, regularPostgres,regularDynamo ,regular80cosmos ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
@@ -609,7 +559,7 @@ jobs:
       max-parallel: 4
 
     runs-on: ubuntu-latest
-    needs: [ regular80aggregateTest, regular80postgres,regular80dynamo ,regular90cosmos ]
+    needs: [ regularAggregateTest, regularPostgres,regularDynamo ,regular90cosmos ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
