--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -176,11 +176,11 @@ jobs:
         dotnet test tests/MultiTenant.AggregateTest/MultiTenant.AggregateTest.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net9.0
         
 
-  regular80cosmos:
+  regular80Cosmos:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
-    needs: [ regularMultitenant ]
+    needs: [ regular80Mixed ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
@@ -230,7 +230,7 @@ jobs:
         dotnet test tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj  --filter "Category!=Flaky&Category!=Performance" -v m -c Release -m:1 -f net8.0
 
 
-  regular90cosmos:
+  regular90Cosmos:
     strategy:
       max-parallel: 4
     runs-on: ubuntu-latest
@@ -452,7 +452,7 @@ jobs:
       max-parallel: 4
 
     runs-on: ubuntu-latest
-    needs: [ regularAggregateTest, regularPostgres,regularDynamo ,regular80cosmos ]
+    needs: [ regularAggregateTest, regularPostgres,regularDynamo ,regular80Cosmos ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
@@ -507,7 +507,7 @@ jobs:
       max-parallel: 4
 
     runs-on: ubuntu-latest
-    needs: [ regularMultitenant, regularPostgres,regularDynamo ,regular90cosmos ]
+    needs: [ regularMultitenant, regularPostgres,regularDynamo ,regular90Cosmos ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 8
