--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -468,17 +468,17 @@ jobs:
         pushd ./tests/Sekiban.Test.Abstructs
         dotnet user-secrets set "ConnectionStrings:SekibanBlob" "${{secrets.SEKIBAN_BLOB_CONNECTION_STRING}}"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{secrets.TEST_COSMOS_CONNECTION_STRING}}"
-        dotnet user-secrets set "ConnectionStrings:SekibanPostgresDefault" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_DEFAULT}}"
-        dotnet user-secrets set "ConnectionStrings:SekibanPostgresSecondary" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_SECONDARY}}"
-        dotnet user-secrets set "Sekiban:Default:Azure:CosmosDatabase" "GithubActions"
-        dotnet user-secrets set "Sekiban:Contexts:Secondary:Azure:CosmosDatabase" "GithubActions"
+        dotnet user-secrets set "ConnectionStrings:SekibanPostgresDefault" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_DEFAULT8}}"
+        dotnet user-secrets set "ConnectionStrings:SekibanPostgresSecondary" "${{secrets.SEKIBAN_POSTGRES_CONNECTION_SECONDARY8}}"
+        dotnet user-secrets set "Sekiban:Default:Azure:CosmosDatabase" "GithubActions8"
+        dotnet user-secrets set "Sekiban:Contexts:Secondary:Azure:CosmosDatabase" "GithubActions8"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
         dotnet user-secrets set "Sekiban:Default:Aws:AccessKey" "${{secrets.TEST_AWS_ACCESS_KEY}}"
         dotnet user-secrets set "Sekiban:Default:Aws:DynamoRegion" "us-west-1"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "jjga_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "jjga_events"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "jjga_d_items"
-        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "jjga_d_events"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTable" "8_jjga_items"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTable" "8_jjga_events"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoItemsTableDissolvable" "8_jjga_d_items"
+        dotnet user-secrets set "Sekiban:Default:Aws:DynamoEventsTableDissolvable" "8_jjga_d_events"
         dotnet user-secrets set "Sekiban:Default:Aws:S3Region" "us-west-1"
         dotnet user-secrets set "Sekiban:Default:Aws:S3BucketName" "jjga-s3"
         dotnet user-secrets set "Sekiban:Contexts:Secondary:Aws:AccessKeyId" "${{secrets.TEST_AWS_ACCESS_KEY_ID}}"
