--- a/internalUsages/SampleProject.Common/SampleProject.Common.csproj
+++ b/internalUsages/SampleProject.Common/SampleProject.Common.csproj
@@ -3,9 +3,9 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>ESSampleProjectLib</RootNamespace>
         <LangVersion>preview</LangVersion>
+        <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
