--- a/internalUsages/FeatureCheck.WebApi.AspireTest/FeatureCheck.WebApi.AspireTest.csproj
+++ b/internalUsages/FeatureCheck.WebApi.AspireTest/FeatureCheck.WebApi.AspireTest.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
         <UserSecretsId>4701fe8b-e543-4611-a80d-f09f08f8f15d</UserSecretsId>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
