--- a/internalUsages/Mixed.Domain/Mixed.Domain.csproj
+++ b/internalUsages/Mixed.Domain/Mixed.Domain.csproj
@@ -3,7 +3,8 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
