--- a/internalUsages/MultiTenant.Domain/MultiTenant.Domain.csproj
+++ b/internalUsages/MultiTenant.Domain/MultiTenant.Domain.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
