--- a/internalUsages/Shipping.Port/Shipping.Port.csproj
+++ b/internalUsages/Shipping.Port/Shipping.Port.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
 </Project>
