--- a/internalUsages/Warehouse.Domain/Warehouse.Domain.csproj
+++ b/internalUsages/Warehouse.Domain/Warehouse.Domain.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>WarehouseContext</RootNamespace>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
