--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Domain/BookBorrowing.Domain.csproj
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Domain/BookBorrowing.Domain.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Sekiban.Core" Version="0.20.3" />
+        <PackageReference Include="Sekiban.Core" Version="0.22.0-preview6" />
     </ItemGroup>
 
 
