--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Cosmos/BookBorrowing.Web.Cosmos.csproj
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Cosmos/BookBorrowing.Web.Cosmos.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
@@ -10,10 +10,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.7" />
-        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.20.3" />
-        <PackageReference Include="Sekiban.Web" Version="0.20.3" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.22.0-preview6" />
+        <PackageReference Include="Sekiban.Web" Version="0.22.0-preview6" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
