--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/BookBorrowing.Web.Dynamo.csproj
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Web.Dynamo/BookBorrowing.Web.Dynamo.csproj
@@ -11,7 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.7" />
-        <PackageReference Include="Sekiban.Infrastructure.Dynamo" Version="0.20.3" />
+        <PackageReference Include="Sekiban.Infrastructure.Dynamo" Version="0.22.0-preview6" />
         <PackageReference Include="Sekiban.Web" Version="0.20.1"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
