--- a/Samples/Tutorials/3.PostgresSample/Postgres.Sample/Postgres.Sample.Domain/Postgres.Sample.Domain.csproj
+++ b/Samples/Tutorials/3.PostgresSample/Postgres.Sample/Postgres.Sample.Domain/Postgres.Sample.Domain.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Sekiban.Core" Version="0.20.3" />
+        <PackageReference Include="Sekiban.Core" Version="0.22.0-preview9" />
     </ItemGroup>
 
 </Project>
