--- a/Samples/Tutorials/3.PostgresSample/Postgres.Sample/Postgres.Sample/Postgres.Sample.csproj
+++ b/Samples/Tutorials/3.PostgresSample/Postgres.Sample/Postgres.Sample/Postgres.Sample.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Sekiban.Infrastructure.Postgres" Version="0.20.3" />
-        <PackageReference Include="Sekiban.Web" Version="0.20.3" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Sekiban.Infrastructure.Postgres" Version="0.22.0-preview9"/>
+        <PackageReference Include="Sekiban.Web" Version="0.22.0-preview9"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
