--- a/Samples/Tutorials/1.GetStarted/BookBorrowing.Domain/BookBorrowing.Domain.csproj
+++ b/Samples/Tutorials/1.GetStarted/BookBorrowing.Domain/BookBorrowing.Domain.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Sekiban.Core" Version="0.22.0-preview8"/>
+        <PackageReference Include="Sekiban.Core" Version="0.22.1" />
     </ItemGroup>
 
 
