--- a/Samples/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/SekibanEventSourcingBasics.Cosmos.Web.csproj
+++ b/Samples/Tutorials/2.SekibanEventSourcingBasics/SekibanEventSourcingBasics.Cosmos.Web/SekibanEventSourcingBasics.Cosmos.Web.csproj
@@ -10,8 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
-        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.22.0-preview9" />
-        <PackageReference Include="Sekiban.Web" Version="0.22.0-preview9" />
+        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.22.1" />
+        <PackageReference Include="Sekiban.Web" Version="0.22.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0"/>
     </ItemGroup>
 
