--- a/Samples/Tutorials/3.PostgresSample/Postgres.Sample/Postgres.Sample.Domain/Postgres.Sample.Domain.csproj
+++ b/Samples/Tutorials/3.PostgresSample/Postgres.Sample/Postgres.Sample.Domain/Postgres.Sample.Domain.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Sekiban.Core" Version="0.22.0-preview9" />
+        <PackageReference Include="Sekiban.Core" Version="0.22.1" />
     </ItemGroup>
 
 </Project>
