--- a/Samples/Tutorials/3.PostgresSample/Postgres.Sample/Postgres.Sample/Postgres.Sample.csproj
+++ b/Samples/Tutorials/3.PostgresSample/Postgres.Sample/Postgres.Sample/Postgres.Sample.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Sekiban.Infrastructure.Postgres" Version="0.22.0-preview9"/>
-        <PackageReference Include="Sekiban.Web" Version="0.22.0-preview9"/>
+        <PackageReference Include="Sekiban.Infrastructure.Postgres" Version="0.22.1" />
+        <PackageReference Include="Sekiban.Web" Version="0.22.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0"/>
     </ItemGroup>
 
