--- a/internalUsages/FeatureCheck.Domain/FeatureCheck.Domain.csproj
+++ b/internalUsages/FeatureCheck.Domain/FeatureCheck.Domain.csproj
@@ -9,7 +9,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\SampleProject.Common\SampleProject.Common.csproj"/>
-        <ProjectReference Include="..\..\src\Sekiban.Core\Sekiban.Core.csproj"/>
+        <ProjectReference Include="..\..\src\Sekiban.Core.Neutral\Sekiban.Core.Neutral.csproj"/>
     </ItemGroup>
 
 
