--- a/internalUsages/MultiTenant.Domain/MultiTenant.Domain.csproj
+++ b/internalUsages/MultiTenant.Domain/MultiTenant.Domain.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\Sekiban.Core\Sekiban.Core.csproj"/>
+        <ProjectReference Include="..\..\src\Sekiban.Core.Neutral\Sekiban.Core.Neutral.csproj"/>
     </ItemGroup>
 
 </Project>
