--- a/internalUsages/Warehouse.Domain/Warehouse.Domain.csproj
+++ b/internalUsages/Warehouse.Domain/Warehouse.Domain.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\Sekiban.Core\Sekiban.Core.csproj"/>
+        <ProjectReference Include="..\..\src\Sekiban.Core.Neutral\Sekiban.Core.Neutral.csproj"/>
         <ProjectReference Include="..\Shipping.Port\Shipping.Port.csproj"/>
         <ProjectReference Include="..\Warehouse.Port\Warehouse.Port.csproj"/>
     </ItemGroup>
