Fix Multi Projection

--- a/src/Sekiban.Pure/Sekiban.Pure.csproj
+++ b/src/Sekiban.Pure/Sekiban.Pure.csproj
@@ -12,4 +12,8 @@
         <PackageReference Include="ResultBoxes" Version="0.3.29"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Query\"/>
+    </ItemGroup>
+
 </Project>
