--- a/src/Sekiban.Infrastructure.IndexedDb/Sekiban.Infrastructure.IndexedDb.csproj
+++ b/src/Sekiban.Infrastructure.IndexedDb/Sekiban.Infrastructure.IndexedDb.csproj
@@ -40,9 +40,8 @@
     <None Include="..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
-  <Target Name="Build runtime" BeforeTargets="DispatchToInnerBuilds">
-    <Exec Command="npm install" WorkingDirectory="Runtime" />
-    <Exec Command="npm run build" WorkingDirectory="Runtime" />
+  <Target Name="Build runtime" BeforeTargets="BeforeBuild">
+    <Exec Command="node build.js" WorkingDirectory="Runtime" />
   </Target>
 
 </Project>
