--- a/src/Sekiban.Aspire.Infrastructure.Cosmos/Sekiban.Aspire.Infrastructure.Cosmos.csproj
+++ b/src/Sekiban.Aspire.Infrastructure.Cosmos/Sekiban.Aspire.Infrastructure.Cosmos.csproj
@@ -5,12 +5,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sekiban.Aspire.Infrastructure.Cosmos</PackageId>
-        <Version>0.22.1</Version>
+        <Version>0.23.0-preview1</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Cosmos Aspire Connector</PackageDescription>
-        <PackageVersion>0.22.1</PackageVersion>
-        <Description>Initial .NET 9 Release</Description>
+        <PackageVersion>0.23.0-preview1</PackageVersion>
+        <Description>Add Indexed DB as infrastructure</Description>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
         <RootNamespace>Sekiban.Aspire.Infrastructure.Cosmos</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -28,8 +28,8 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.22.1"/>
-        <PackageReference Include="Sekiban.Web" Version="0.22.1"/>
+        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.23.0-preview1"/>
+        <PackageReference Include="Sekiban.Web" Version="0.23.0-preview1"/>
         <ProjectReference Include="..\Sekiban.Infrastructure.Cosmos\Sekiban.Infrastructure.Cosmos.csproj"/>
         <ProjectReference Include="..\Sekiban.Web\Sekiban.Web.csproj"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
