--- a/src/Sekiban.Core.DotNet/Sekiban.Core.DotNet.csproj
+++ b/src/Sekiban.Core.DotNet/Sekiban.Core.DotNet.csproj
@@ -5,13 +5,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Core.DotNet</PackageId>
-        <Version>0.22.1</Version>
+        <Version>0.23.0-preview1</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Core</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.22.1</PackageVersion>
-        <Description>Initial .NET 9 Release</Description>
+        <PackageVersion>0.23.0-preview1</PackageVersion>
+        <Description>Add Indexed DB as infrastructure</Description>
         <AssemblyName>Sekiban.Core.DotNet</AssemblyName>
         <RootNamespace>Sekiban.Core</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
