--- a/src/Sekiban.Infrastructure.IndexedDb/Sekiban.Infrastructure.IndexedDb.csproj
+++ b/src/Sekiban.Infrastructure.IndexedDb/Sekiban.Infrastructure.IndexedDb.csproj
@@ -5,13 +5,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>Sekiban.Infrastructure.IndexedDb</PackageId>
-    <Version>0.22.1</Version>
+    <Version>0.23.0-preview1</Version>
     <Authors>J-Tech Group</Authors>
     <Company>J-Tech-Japan</Company>
     <PackageDescription>Sekiban - Event Sourcing Framework IndexedDB Infrastructure</PackageDescription>
     <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-    <PackageVersion>0.22.1</PackageVersion>
-    <Description>Initial .NET 9 Release</Description>
+    <PackageVersion>0.23.0-preview1</PackageVersion>
+    <Description>Add Indexed DB as infrastructure</Description>
     <LangVersion>preview</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReadmeFile>README.md</PackageReadmeFile>
